--- a/kpi-drill/public/index.html
+++ b/kpi-drill/public/index.html
@@ -21,6 +21,7 @@
     -->
     <title>React App</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.0.0/polyfill.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
