gd-ui-boilerplate - Vizuly Demo

--- a/gd-ui-boilerplate/public/index.html
+++ b/gd-ui-boilerplate/public/index.html
@@ -21,6 +21,12 @@
     -->
     <title>GoodData.UI Boilerplate</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.0.0/polyfill.min.js"></script>
+    <!-- Vizuly.io -->
+    <script src="./vizuly/lib/d3_v5.7.min.js"></script>
+    <script src="./vizuly/lib/vizuly2_core.min.js"></script>
+    <script src="./vizuly/NestedBarChart.js"></script>
+    <script src="./vizuly/data/nestedbarchart_data.js"></script>
+    <link src="./vizuly/lib/styles/vizuly.css" />
   </head>
   <body>
     <noscript>
