--- a/gd-ui-boilerplate/public/index.html
+++ b/gd-ui-boilerplate/public/index.html
@@ -21,6 +21,8 @@
     -->
     <title>GoodData.UI Boilerplate</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.0.0/polyfill.min.js"></script>
+    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/cfe5f316/dist/aframe-extras.js"></script>
+    <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
   </head>
   <body>
     <noscript>
